tests/expected_invalid_failing_match_duplicate_success.diag.out
<input>:13:9: error: duplicate succeeded(...) arm
            succeeded(other) => other,
            ^^^^^^^^^^^^^^^^
